force-app/main/default/objects/Home_Loan_RM__c/Home_Loan_RM__c.object-meta.xml
<CustomObject>
    <label>Home Loan RM</label>
    <nameField>
        <label>Home Loan RM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Loan RMs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>