force-app/main/default/objects/Home_Loan_RM__c/fields/Disbursement_RM_User__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_RM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement RM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Loan_RMs2</relationshipName>
    <type>Lookup</type>
</CustomField>