force-app/main/default/objects/Home_Loan_RM__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Home Loan RMs</relationshipLabel>
    <relationshipName>Home_Loan_RMs</relationshipName>
    <type>Lookup</type>
</CustomField>