force-app/main/default/objects/Home_Loan_RM__c/fields/Reporting_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporting_2_Email__c</fullName>
    <label>Reporting 2 Email</label>
    <type>Email</type>
</CustomField>