force-app/main/default/objects/Home_Loan_RM__c/fields/RM_Email__c.field-meta.xml
<CustomField>
    <fullName>RM_Email__c</fullName>
    <formula>User__r.Email</formula>
    <label>RM Email</label>
    <type>Text</type>
</CustomField>