force-app/main/default/objects/Home_Loan_RM__c/fields/TL_User__c.field-meta.xml
<CustomField>
    <fullName>TL_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Loan_RMs1</relationshipName>
    <type>Lookup</type>
</CustomField>