force-app/main/default/objects/Home_Loan_RM__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Home Loan RMs</relationshipLabel>
    <relationshipName>Home_Loan_RMs</relationshipName>
    <type>Lookup</type>
</CustomField>