force-app/main/default/objects/Home_Loan_RM__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Loan_RMs</relationshipName>
    <type>Lookup</type>
</CustomField>