force-app/main/default/objects/Home_Loan_RM__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>TL_Name__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>